syntax = "proto3";
package pb;

import "userMessage.proto";

service UserService {
  rpc FindUserById(FindUserByIdRequest) returns (User);
  rpc FindUserByEmailAndPassword(FindUserByEmailAndPasswordRequest) returns (User);
}